--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,30 @@
+@import url('https://fonts.googleapis.com/css?family=Merienda|Raleway');
+
+
+body, html {
+    height: 100%;
+}
+
+body {
+    font-family: 'Raleway', sans-serif;
+    position: relative;
+}
+
+h1, h2, h3, h4, h5, h6, a {
+    font-family: 'Merienda', cursive;
+}
+
+.scroll_target {
+    display: default;
+}
+
 .section {
     height: 100vh;
 }
 
-body, html {
-    height: 100%;
-  }
+.section_about {
+    min-height: 100vh;
+}
 
 .parallax {  
   
@@ -26,17 +46,23 @@ h1 {
       flex-direction: column;
       align-content: center;
       justify-content: center;
-      height: 35vw;
+      height: 70vh;
+}
+
+
+
+.nav_link {
+    color: rgb(39, 138, 252);
+    font-size: 16px;
+    
 }
 
 .active {
-    text-decoration: underline;
-}
-
-.nav_link {
-    color: white;
-    font-size: 18px;
-    font-weight: lighter;
+    text-decoration-line: underline;
+    text-decoration-style: double;
+    color: rgb(39, 138, 252);
+    font-size: 16px;
+    font-weight: bold; 
 }
 
 .nav_row {
@@ -90,7 +116,12 @@ a:hover {
     color: rgb(65, 195, 255);
 }
 
-@media only screen and (max-width: 768px) {
+.navbar, .navbar-default, .navbar-fixed-top {
+    background-color: transparent;
+    border: none;
+}
+
+@media only screen and (max-width: 767px) {
     .parallax-section {
         height: 100vh;
     }
@@ -100,6 +131,6 @@ a:hover {
 
     .shop_button {
         left: 65vw;
-    }
-    
+    } 
 }
+
